Adjust constants name to reflect that we're checking for both null and empty
This will allow for better readability across the program