@@ -32,7 +32,7 @@ public class LocalEmployeeCredentialsManager extends SystemCredentialsManager {
      * 
      * @param employeeID The unique identifier for the employee.
      * 
-     * @precondition employeeID != null
+     * @precondition employeeID != null && !employeeID.isBlank()
      * @postcondition none
      * 
      * @return The credentials associated with the employee ID or null if not found.
@@ -76,6 +76,7 @@ public class LocalEmployeeCredentialsManager extends SystemCredentialsManager {
     
 	/**
 	 * Generates a unique employee ID.
+	 * Example: 1244574e
 	 * 
 	 * @precondition none
 	 * @postcondition none
@@ -87,8 +88,8 @@ public class LocalEmployeeCredentialsManager extends SystemCredentialsManager {
     }
     
     private EmployeeType checkForValidEmployeeType(String employeeType) {
-		if (employeeType == null || employeeType.trim().isEmpty()) {
-			throw new IllegalArgumentException(Constants.EMPLOYEE_TYPE_CANNOT_BE_NULL);
+		if (employeeType == null || employeeType.isBlank()) {
+			throw new IllegalArgumentException(Constants.EMPLOYEE_TYPE_CANNOT_BE_NULL_OR_EMPTY);
 		}
 		try {
 			return EmployeeType.valueOf(employeeType.toUpperCase());
@@ -98,26 +99,26 @@ public class LocalEmployeeCredentialsManager extends SystemCredentialsManager {
     }
     
     private void checkForValidPassword(String password) {
-		if (password == null || password.trim().isEmpty()) {
-			throw new IllegalArgumentException(Constants.PASSWORD_CANNOT_BE_NULL);
+		if (password == null || password.isBlank()) {
+			throw new IllegalArgumentException(Constants.PASSWORD_CANNOT_BE_NULL_OR_EMPTY);
 		}
     }
     
 	private void checkForValidLastName(String lastName) {
-		if (lastName == null || lastName.trim().isEmpty()) {
-			throw new IllegalArgumentException(Constants.LAST_NAME_CANNOT_BE_NULL);
+		if (lastName == null || lastName.isBlank()) {
+			throw new IllegalArgumentException(Constants.LAST_NAME_CANNOT_BE_NULL_OR_EMPTY);
 		}
 	}
     
 	private void checkForValidEmployeeID(String employeeID) {
-		if (employeeID == null || employeeID.trim().isEmpty()) {
-			throw new IllegalArgumentException(Constants.EMPLOYEE_ID_CANNOT_BE_NULL);
+		if (employeeID == null || employeeID.isBlank()) {
+			throw new IllegalArgumentException(Constants.EMPLOYEE_ID_CANNOT_BE_NULL_OR_EMPTY);
 		}
 	}
 	
 	private void checkForValidFirstName(String firstName) {
-        if (firstName == null || firstName.trim().isEmpty()) {
-            throw new IllegalArgumentException(Constants.FIRST_NAME_CANNOT_BE_NULL);
+        if (firstName == null || firstName.isBlank()) {
+            throw new IllegalArgumentException(Constants.FIRST_NAME_CANNOT_BE_NULL_OR_EMPTY);
         }
     }
 	
